# ai-climbing

./: .gitignore  README.md  debug-analyze-500-error.md  debug-annotated-video-playback.md  debug-result-video-playback.md  pyproject.toml
.dbg/: analyze-500-error.env  trae-debug-log-analyze-500-error.ndjson
api/: README.md  pyproject.toml
api/src/api/: __init__.py  config.py  main.py
api/src/api/repositories/: db.py  video_repo.py
api/src/api/routers/: __init__.py  analysis.py  annotations.py  frames.py  results.py  videos.py
api/src/api/schemas/: annotation.py  result.py  task.py  video.py
api/src/api/services/: analysis_service.py  annotation_service.py  frame_service.py  video_service.py
examples/: route_context.sample.json
src/ai_climbing/: __init__.py  cli.py  metrics.py  move_sequence.py  phase_segmentation.py  pose_pipeline.py  route_context.py  rules.py
tests/: test_move_sequence.py  test_phase_segmentation.py  test_route_context.py  test_rules.py
web/: package-lock.json  package.json
web/src/: index.css  main.tsx
web/src/api/: analysis.ts  annotations.ts  client.ts  frames.ts  results.ts  videos.ts
web/src/app/: router.tsx
web/src/components/: FrameCanvas.tsx
web/src/features/annotation/: AnnotateSidebar.tsx  AnnotateWorkspacePanel.tsx  model.ts  useUnsavedChangesGuard.ts
web/src/features/result/: ResultInsightsPanel.tsx  ResultVideoPanel.tsx  model.ts
web/src/pages/: AnalyzePage.tsx  AnnotatePage.tsx  ResultPage.tsx  UploadPage.tsx  VideoOverviewPage.tsx
web/src/stores/: annotationStore.ts
