[project]
name = "ai-climbing"
version = "0.1.0"
description = "MVP for climbing posture analysis with MediaPipe."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mediapipe==0.10.14",
  "numpy>=1.26.0",
  "opencv-python>=4.10.0.84",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_climbing"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "api",
]
