[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "谭明伟", email = "tanmw1212@zsmarter.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
